# Simple-ray-tracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  black_hole.h  blackhole  cmake_install.cmake  dielectric.h  hittable.h  image.ppm  lambertian.h  main.cpp  main_nbody  main_nbody.cpp  material.h  metal.h  nbody  nbody.h  ppm_to_png.py  ray.h  sphere.h  vec3.h
output/: nbody_0.ppm  nbody_1.ppm  nbody_2.ppm  nbody_3.ppm  nbody_4.ppm  nbody_5.ppm  nbody_6.ppm  nbody_7.ppm  nbody_8.ppm  nbody_9.ppm  render_0.ppm  render_1.ppm  render_10.ppm  render_100.ppm  render_101.ppm  render_102.ppm  render_103.ppm  render_104.ppm  render_105.ppm  render_106.ppm  render_107.ppm  render_108.ppm  render_109.ppm  render_11.ppm  render_110.ppm  render_111.ppm  render_112.ppm  render_113.ppm  render_114.ppm  render_115.ppm  render_116.ppm  render_117.ppm  render_118.ppm  render_119.ppm  render_12.ppm  render_13.ppm  render_14.ppm  render_15.ppm  render_16.ppm  render_17.ppm  (+90 more)
